--- a/app/package.json
+++ b/app/package.json
@@ -1,16 +1,17 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",
+  "description": "", 
   "main": "index.js",
   "scripts": {
+    "start": "nodemon -r esm index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
     "nodemon": "^2.0.4"
