--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "description": "", 
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon -r esm index.js",
@@ -13,6 +13,7 @@
   "dependencies": {
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "joi": "^17.2.1",
     "mongoose": "^5.10.0",
     "nodemon": "^2.0.4"
   }
