--- a/app/package.json
+++ b/app/package.json
@@ -13,8 +13,13 @@
   "dependencies": {
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-winston": "^4.0.5",
     "joi": "^17.2.1",
     "mongoose": "^5.10.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0",
+    "winston-elasticsearch": "^0.10.0",
+    "winston-mongodb": "^5.0.5"
   }
 }
