--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -r esm server.js",
-    "test": "jest --runInBand --force-exit"
+    "test": "jest -i --force-exit",
+    "test-debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
+    "jest": "^26.4.2",
     "joi": "^17.2.1",
     "mongoose": "^5.10.0",
     "nodemon": "^2.0.4",
@@ -28,7 +30,6 @@
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
-    "jest": "^26.4.2",
     "mongodb-memory-server": "^6.8.0"
   },
   "config": {
