--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -r esm index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand ./tests"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +21,15 @@
     "winston-daily-rotate-file": "^4.5.0",
     "winston-elasticsearch": "^0.10.0",
     "winston-mongodb": "^5.0.5"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "mongodb-memory-server": "^6.0.1",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-jest": "^26.3.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
