--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r esm server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -r esm ./src/server.js",
+    "test": "jest --runInBand --force-exit"
   },
   "keywords": [],
   "author": "",
