--- a/app/.vscode/launch.json
+++ b/app/.vscode/launch.json
@@ -20,7 +20,8 @@
             "runtimeArgs": [
                 "--inspect-brk",
                 "${workspaceRoot}/node_modules/jest/bin/jest.js",
-                "--runInBand"
+                "--runInBand",
+                "--force-exit"
             ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
