--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - parcelkoi-net
     volumes:
-      - C:\github\my\parcelkoi-server\app:/usr/share/mongo/data
+      - data01:/data/db
   elasticsearch:
     image: elasticsearch:7.9.2
     container_name: elasticsearch
@@ -30,7 +30,10 @@ services:
     volumes:
       - data03:/usr/share/kibana/data
   parcelkoi:
-    image: foyzulkarim/parcelkoi
+    #image: parcelkoi
+    build:
+      context: ./
+      dockerfile: ./Dockerfile
     container_name: parcelkoi
     ports:
       - "3000:3000"
@@ -38,6 +41,7 @@ services:
       - parcelkoi-net
     volumes:
       - data04:/usr/share/parcelkoi/data
+      - .:/app
     environment:
       - DEBUG=1
       - MONGODB_HOST=mongo
@@ -50,10 +54,10 @@ networks:
     driver: bridge
 volumes:
   data01:
-    driver: local
+    #driver: local
   data02:
-    driver: local
+    #driver: local
   data03:
-    driver: local
+    #driver: local
   data04:
-    driver: local
+    #driver: local
