--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "joi": "^17.2.1",
     "mongoose": "^5.10.0",
     "nodemon": "^2.0.4",
+    "swagger-jsdoc": "^4.3.0",
+    "swagger-ui-express": "^4.1.4",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0",
     "winston-elasticsearch": "^0.10.0",
