POC ok for Dockerfile

--- a/app/.vscode/launch.json
+++ b/app/.vscode/launch.json
@@ -5,6 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Docker: Attach to Node",
+            "type": "node",
+            "request": "attach",
+            "port": 9229,
+            "address": "localhost",
+            "localRoot": "${workspaceFolder}",
+            "remoteRoot": "/usr/src/app",
+            "protocol": "inspector",
+            "restart": true
+        },
+        {
             "type": "pwa-node",
             "request": "launch",
             "name": "Launch Program",
